# iBookRead

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  demo.md  manual_test.py  pyproject.toml  requirements.txt  setup.py
.qoder/quests/: command-line-document-reader-design.md  technical-solution-design.md
ibook_reader/: __init__.py  cli.py  config.py
ibook_reader/core/: __init__.py  format_detector.py  interactive_pager.py  paginator.py
ibook_reader/models/: __init__.py  bookmark.py  document.py  progress.py
ibook_reader/parsers/: __init__.py  base.py  epub_parser.py  factory.py  markdown_parser.py  mobi_parser.py  txt_parser.py
ibook_reader/services/: __init__.py  auth_service.py  bookmark_service.py  progress_service.py  reader_service.py
ibook_reader/ui/: __init__.py  components.py  input_handler.py  renderer.py
ibook_reader/utils/: __init__.py  crypto.py  file_utils.py  text_utils.py
tests/: __init__.py
tests/integration/: test_reading_flow.py
tests/unit/: test_config.py  test_crypto.py  test_file_utils.py  test_format_detector.py  test_models.py  test_paginator.py  test_parsers.py  test_services.py  test_text_utils.py  test_ui.py
