[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ibook-reader"
version = "1.0.0"
description = "命令行文档阅读工具，支持 EPUB、TXT、MOBI、Markdown 等格式"
authors = [{name = "iBookRead Team"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "ebooklib>=0.18",
    "mobi>=0.3.0",
    "markdown>=3.4.0",
    "chardet>=5.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
]

[project.scripts]
ibook = "ibook_reader.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/iBookRead"
"Bug Tracker" = "https://github.com/yourusername/iBookRead/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["ibook_reader"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
